overflow issues

--- a/css/style.scss
+++ b/css/style.scss
@@ -391,6 +391,7 @@ a.active-tab-menu {
 .business-footer {
 		margin-top: -5px;
 		background-color: $background-color;
+		overflow: hidden;
 	ul {
 	  margin:  0;
     padding: 0;
